animations for HeroSection

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "gsap": "^3.12.7",
     "jotai": "^2.12.2",
     "next": "15.2.4",
     "react": "^19.0.0",
